--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@mantine/core": "^6.0.13",
     "@mantine/form": "^6.0.15",
     "@mantine/hooks": "^6.0.13",
+    "@tabler/icons-react": "^3.31.0",
     "@tanstack/react-table": "^8.9.3",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
